<?xml version="1.0" encoding="utf-8"?>
<android.support.constraint.ConstraintLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    app:layout_behavior="@string/appbar_scrolling_view_behavior"
    tools:context="jnm219.cse216.lehigh.edu.tutorialforjnm219.Register"
    tools:showIn="@layout/register_layout">

    <RelativeLayout
        android:layout_width="368dp"
        android:layout_height="439dp"
        android:orientation="vertical"
        tools:layout_editor_absoluteX="8dp"
        tools:layout_editor_absoluteY="7dp">

        <TextView
            android:id="@+id/topLabel"
            android:layout_width="383dp"
            android:layout_height="52dp"
            android:text=""
            tools:layout_editor_absoluteX="0dp"
            tools:layout_editor_absoluteY="8dp" />

        <TextView
            android:id="@+id/userName"
            android:layout_width="383dp"
            android:layout_height="52dp"
            android:layout_alignParentLeft="true"
            android:layout_alignParentStart="true"
            android:layout_below="@+id/topLabel"
            android:text="Enter Username:"
            tools:layout_editor_absoluteX="0dp"
            tools:layout_editor_absoluteY="8dp" />
        <EditText
            android:id="@+id/enterUserName"
            android:layout_width="384dp"
            android:layout_height="52dp"
            android:ems="10"
            android:inputType="textPersonName"
            android:text=""
            tools:layout_editor_absoluteX="0dp"
            tools:layout_editor_absoluteY="62dp"
            android:layout_above="@+id/enterRealName"
            android:layout_alignParentLeft="true"
            android:layout_alignParentStart="true"
            android:layout_marginBottom="18dp" />
        <TextView
            android:id="@+id/realName"
            android:layout_width="383dp"
            android:layout_height="15dp"
            android:text="Enter Real Name:"
            tools:layout_editor_absoluteX="0dp"
            tools:layout_editor_absoluteY="8dp"
            android:layout_below="@+id/userName"
            android:layout_alignParentLeft="true"
            android:layout_alignParentStart="true"
            android:layout_marginTop="17dp" />
        <EditText
            android:id="@+id/enterRealName"
            android:layout_width="384dp"
            android:layout_height="52dp"
            android:ems="10"
            android:inputType="textPersonName"
            android:text=""
            tools:layout_editor_absoluteX="0dp"
            tools:layout_editor_absoluteY="62dp"
            android:layout_below="@+id/realName"
            android:layout_alignParentLeft="true"
            android:layout_alignParentStart="true" />
        <TextView
            android:id="@+id/email"
            android:layout_width="383dp"
            android:layout_height="52dp"
            android:text="Enter Email:"
            tools:layout_editor_absoluteX="0dp"
            tools:layout_editor_absoluteY="8dp"
            android:layout_below="@+id/enterRealName"
            android:layout_alignParentLeft="true"
            android:layout_alignParentStart="true"
            android:layout_marginTop="18dp" />
        <EditText
            android:id="@+id/enterEmail"
            android:layout_width="384dp"
            android:layout_height="52dp"
            android:ems="10"
            android:inputType="textPersonName"
            android:text=""
            tools:layout_editor_absoluteX="0dp"
            tools:layout_editor_absoluteY="62dp"
            android:layout_marginTop="24dp"
            android:layout_alignTop="@+id/email"
            android:layout_alignParentLeft="true"
            android:layout_alignParentStart="true" />

        <Button
            android:id="@+id/buttonCancel"
            android:layout_width="191dp"
            android:layout_height="50dp"
            android:text="Cancel"
            tools:layout_editor_absoluteX="0dp"
            tools:layout_editor_absoluteY="371dp"
            android:layout_marginTop="22dp"
            android:layout_below="@+id/enterEmail"
            android:layout_alignParentLeft="true"
            android:layout_alignParentStart="true" />

        <Button
            android:id="@+id/buttonOk"
            android:layout_width="191dp"
            android:layout_height="50dp"
            android:layout_alignBaseline="@+id/buttonCancel"
            android:layout_alignBottom="@+id/buttonCancel"
            android:layout_toEndOf="@+id/buttonCancel"
            android:layout_toRightOf="@+id/buttonCancel"
            android:text="OK"
            tools:layout_editor_absoluteX="191dp"
            tools:layout_editor_absoluteY="371dp" />

    </RelativeLayout>
</android.support.constraint.ConstraintLayout>