...
            android:layout_below="@+id/topLabel"
            android:layout_alignParentLeft="true"
            android:layout_alignParentStart="true"
            android:layout_marginTop="14dp" />

        <EditText
            android:id="@+id/enterUserName"
            android:layout_width="384dp"
            android:layout_height="52dp"
            android:ems="10"
            android:inputType="textPersonName"
            android:text=""
            tools:layout_editor_absoluteX="0dp"
...
            tools:layout_editor_absoluteY="8dp"
            tools:layout_editor_absoluteX="0dp"
            android:layout_centerVertical="true"
            android:layout_alignParentLeft="true"
            android:layout_alignParentStart="true" />
        <EditText
            android:id="@+id/enterPassword"
            android:layout_width="384dp"
            android:layout_height="52dp"
            android:ems="10"
            android:inputType="textPersonName"
            android:text=""
            tools:layout_editor_absoluteX="0dp"
...
